--- a/RazorPagesSampleApp/Pages/_Layout.cshtml
+++ b/RazorPagesSampleApp/Pages/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - RazorPagesSampleApp</title>
+    <title>@ViewData["Title"] - Star-Crossed</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,11 +26,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-page="/Index" class="navbar-brand">RazorPagesSampleApp</a>
+                <a asp-page="/Index" class="navbar-brand">Star-Crossed</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-page="/Index">Home</a></li>
+                    @*<li><a asp-page="/Index">Home</a></li>*@
                 </ul>
             </div>
         </div>
@@ -39,7 +39,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - RazorPagesSampleApp</p>
+            <p>&copy; 2018 - Star-Crossed</p>
         </footer>
     </div>
 
